# serializer version: 1
# name: test_all_entities[device_tracker.ha_gateway_position-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <DeviceTrackerEntityCapabilityAttribute.TRACKING_TYPE: 'tracking_type'>: <TrackingType.POSITION: 'position'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'device_tracker',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'device_tracker.ha_gateway_position',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Position',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Position',
    'platform': 'meshtastic',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'position',
    'unique_id': '!2e9545b8_position',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[device_tracker.ha_gateway_position-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'altitude': 38,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'HA Gateway Position',
      <TrackerEntityStateAttribute.GPS_ACCURACY: 'gps_accuracy'>: 0,
      <DeviceTrackerEntityStateAttribute.IN_ZONES: 'in_zones'>: list([
      ]),
      <EntityStateAttribute.LATITUDE: 'latitude'>: 52.1234567,
      'location_source': 'LOC_MANUAL',
      <EntityStateAttribute.LONGITUDE: 'longitude'>: 13.1234567,
      'precision_bits': None,
      <DeviceTrackerEntityStateAttribute.SOURCE_TYPE: 'source_type'>: <SourceType.GPS: 'gps'>,
      <DeviceTrackerEntityCapabilityAttribute.TRACKING_TYPE: 'tracking_type'>: <TrackingType.POSITION: 'position'>,
    }),
    'context': <ANY>,
    'entity_id': 'device_tracker.ha_gateway_position',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'not_home',
  })
# ---
# name: test_all_entities[device_tracker.remote_one_position-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <DeviceTrackerEntityCapabilityAttribute.TRACKING_TYPE: 'tracking_type'>: <TrackingType.POSITION: 'position'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'device_tracker',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'device_tracker.remote_one_position',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Position',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Position',
    'platform': 'meshtastic',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'position',
    'unique_id': '!2e9545b8_!aabbccdd_position',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[device_tracker.remote_one_position-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'altitude': 42,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Remote One Position',
      <TrackerEntityStateAttribute.GPS_ACCURACY: 'gps_accuracy'>: 0,
      <DeviceTrackerEntityStateAttribute.IN_ZONES: 'in_zones'>: list([
      ]),
      <EntityStateAttribute.LATITUDE: 'latitude'>: 52.1111111,
      'location_source': None,
      <EntityStateAttribute.LONGITUDE: 'longitude'>: 13.1111111,
      'precision_bits': None,
      <DeviceTrackerEntityStateAttribute.SOURCE_TYPE: 'source_type'>: <SourceType.GPS: 'gps'>,
      <DeviceTrackerEntityCapabilityAttribute.TRACKING_TYPE: 'tracking_type'>: <TrackingType.POSITION: 'position'>,
    }),
    'context': <ANY>,
    'entity_id': 'device_tracker.remote_one_position',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'not_home',
  })
# ---
